Bug 973696 - fix CameraControl lifetime regressions in WebRTC, r=jesup