content/media/webrtc/MediaEngineWebRTCVideo.cpp
@@ -25,7 +25,13 @@ extern PRLogModuleInfo* GetMediaManagerLog();
 /**
  * Webrtc video source.
  */
+#ifndef MOZ_B2G_CAMERA
 NS_IMPL_ISUPPORTS1(MediaEngineWebRTCVideoSource, nsIRunnable)
+#else
+NS_IMPL_QUERY_INTERFACE1(MediaEngineWebRTCVideoSource, nsIRunnable)
+NS_IMPL_ADDREF_INHERITED(MediaEngineWebRTCVideoSource, CameraControlListener)
+NS_IMPL_RELEASE_INHERITED(MediaEngineWebRTCVideoSource, CameraControlListener)
+#endif
 
 // ViEExternalRenderer Callback.
 #ifndef MOZ_B2G_CAMERA
@@ -495,6 +501,10 @@ MediaEngineWebRTCVideoSource::AllocImpl() {
   MOZ_ASSERT(NS_IsMainThread());
 
   mCameraControl = ICameraControl::Create(mCaptureIndex, nullptr);
+
+  // Add this as a listener for CameraControl events. We don't need
+  // to explicitly remove this--destroying the CameraControl object
+  // in DeallocImpl() will do that for us.
   mCameraControl->AddListener(this);
 }
 
@@ -539,7 +549,6 @@ MediaEngineWebRTCVideoSource::OnHardwareStateChange(HardwareState aState)
     mState = kAllocated;
   } else {
     mState = kReleased;
-    mCameraControl->RemoveListener(this);
   }
   mCallbackMonitor.Notify();
 }
